RESOLVED FIXED39387
[EFL] Fix focus ring
https://bugs.webkit.org/show_bug.cgi?id=39387
Summary [EFL] Fix focus ring
Lucas De Marchi
Reported 2010-05-19 16:11:29 PDT
It was missing a #if !PLATFORM(EFL) in order to EFL port to work as GTK and QT. Following patch fixes this issue.
Attachments
Fix focus ring (1.27 KB, patch)
2010-05-19 17:13 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-05-19 17:13:29 PDT
Created attachment 56537 [details] Fix focus ring
Eric Seidel (no email)
Comment 2 2010-05-20 00:38:28 PDT
Comment on attachment 56537 [details] Fix focus ring Seems this should be a whitelist instead of a blacklist at this point.
WebKit Commit Bot
Comment 3 2010-05-21 03:34:42 PDT
Comment on attachment 56537 [details] Fix focus ring Clearing flags on attachment: 56537 Committed r59923: <http://trac.webkit.org/changeset/59923>
WebKit Commit Bot
Comment 4 2010-05-21 03:34:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.