2010-05-21  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Eric Seidel.

        [EF] Fix support for focus ring.
        https://bugs.webkit.org/show_bug.cgi?id=39387

        No new tests required.

        * html/HTMLAnchorElement.cpp: Add EFL to #ifdef
        (WebCore::HTMLAnchorElement::isMouseFocusable):

Canonical link: https://commits.webkit.org/51016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59923 268f45cc-cd09-0410-ab3c-d52691b4dbfc