WebCore/html/HTMLAnchorElement.cpp
@@ -78,7 +78,7 @@ bool HTMLAnchorElement::supportsFocus() const
 bool HTMLAnchorElement::isMouseFocusable() const
 {
     // Anchor elements should be mouse focusable, https://bugs.webkit.org/show_bug.cgi?id=26856
-#if !PLATFORM(GTK) && !PLATFORM(QT)
+#if !PLATFORM(GTK) && !PLATFORM(QT) && !PLATFORM(EFL)
     if (isLink())
         // Only allow links with tabIndex or contentEditable to be mouse focusable.
         return HTMLElement::supportsFocus();
